# fnn

./: CMakeLists.txt  FeedforwardNeuralNetwork.cpp  FeedforwardNeuralNetwork.h  Layer.cpp  Layer.h  Neuron.cpp  Neuron.h  Test.cpp  Test.h  Utils.cpp  Utils.h  main.cpp
